--- a/webapp/artushima-web/src/app/authentication/components/login/login.component.html
+++ b/webapp/artushima-web/src/app/authentication/components/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="inputPassword">Nazwa użytkownika</label>
+      <input type="text" class="form-control" id="inputUserName">
+    </div>
+    <div class="form-group">
+      <label for="inputPassword">Hasło</label>
+      <input type="password" class="form-control" id="inputPassword" placeholder="Hasło">
+    </div>
+    <button type="submit" class="btn btn-primary">Zaloguj się</button>
+  </form>
+</div>
