--- a/webapp/artushima-web/src/app/shared/components/navbar/navbar.component.html
+++ b/webapp/artushima-web/src/app/shared/components/navbar/navbar.component.html
@@ -5,14 +5,14 @@
     </span>
     <span class="m-2">Artushima</span>
     <span class="m-2 art-navbar-btn">
-      <a href="/dashboard">
+      <a routerLink="/dashboard">
         <fa-icon [icon]="iconHome"></fa-icon>
       </a>
     </span>
   </span>
   <span class="navbar-text">
     <span class="m-2 art-navbar-btn">
-      <a href="/login">
+      <a routerLink="/login">
         <fa-icon [icon]="iconLogInOut" size="lg"></fa-icon>
       </a>
     </span>
