make the logo button of the navbar redirect to the dashboard

--- a/artushima-web/src/app/core/components/navbar/navbar.component.html
+++ b/artushima-web/src/app/core/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 
   <!-- Left part -->
   <span class="navbar-text">
-    <span class="art-navbar-btn">
+    <span routerLink="/dashboard" class="art-navbar-btn">
       <span class="m-2">
         <fa-icon [icon]="iconBiohazard" size="lg"></fa-icon>
       </span>
