--- a/artushima-web/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/artushima-web/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -1,1 +1,18 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+
+    <!-- user list -->
+    <div *ngIf="hasRoleShowUsers" class="col">
+      <div class="card">
+        <div class="card-header">
+          Użytkownicy
+        </div>
+        <div class="card-body">
+          <p>Zobacz listę wszystkich użytkowników i nimi zarządzaj.</p>
+          <button routerLink="/users/list" class="btn btn-primary">Lista użytkowników</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
