--- a/artushima-web/src/app/users/components/user-list/user-list.component.html
+++ b/artushima-web/src/app/users/components/user-list/user-list.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col">
       <!-- button redirecting to creating a new user -->
-      <button routerLink="/users/add" class="btn btn-primary float-right">+</button>
+      <button *ngIf="hasRoleCreateUser" routerLink="/users/add" class="btn btn-primary float-right">+</button>
     </div>
   </div>
 </div>
