add missing tests for the dashboard component

--- a/artushima-web/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/artushima-web/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
 
     <!-- user list -->
-    <div *ngIf="hasRoleShowUsers" class="col">
+    <div id="user-list-card" *ngIf="hasRoleShowUsers" class="col">
       <div class="card">
         <div class="card-header">
           Użytkownicy
