--- a/artushima-web/src/app/my-campaigns/components/my-campaigns-list/my-campaigns-list.component.html
+++ b/artushima-web/src/app/my-campaigns/components/my-campaigns-list/my-campaigns-list.component.html
@@ -1,1 +1,30 @@
-<p>my-campaigns-list works!</p>
+<!-- header -->
+<div class="container mb-4">
+  <div class="row">
+    <div class="col">
+      <h1>Moje kampanie</h1>
+    </div>
+    <div class="col">
+      <!-- button redirecting to the campaign creator -->
+      <button id="btn-redirect-campaign-new" class="btn btn-primary float-right">Nowa kampania</button>
+    </div>
+  </div>
+</div>
+
+<!-- table with campaigns -->
+<div class="container">
+  <table id="my-campaigns-list-table" class="table table-hover">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Nazwa kampanii</th>
+      </tr>
+    </thead>
+    <tbody id="my-campaigns-list-table-body">
+      <tr *ngFor="let campaign of myCampaigns">
+        <td>{{campaign.id}}</td>
+        <td>{{campaign.campaignName}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
