--- a/artushima-web/src/app/my-campaigns/components/start-campaign/start-campaign.component.html
+++ b/artushima-web/src/app/my-campaigns/components/start-campaign/start-campaign.component.html
@@ -1,1 +1,20 @@
-<p>start-campaign works!</p>
+<div class="container">
+
+  <h1>Nowa kampania</h1>
+
+  <br>
+
+  <form>
+    <div class="form-group">
+      <label>Tytuł kampanii</label>
+      <input type="text" class="form-control" name="campaignName" [(ngModel)]="campaignName">
+    </div>
+
+    <div class="form-group">
+      <label>Data rozpoczęcia kampanii</label>
+      <input type="date" class="form-control" name="beginDate" [(ngModel)]="beginDate">
+    </div>
+
+    <button type="submit" class="btn btn-primary float-right" (click)="startOnClick()">Rozpocznij</button>
+  </form>
+</div>
