--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
@@ -1,1 +1,7 @@
-<p>campaign-details works!</p>
+<div class="container">
+  <app-campaign-details-campaign-info
+    [campaignTitle]="'Kampania 1'"
+    [campaignId]="1"
+    [campaignCreatedOn]="'2020-01-01'">
+  </app-campaign-details-campaign-info>
+</div>
