implement the GmInfoComponent

--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
@@ -1,15 +1,19 @@
 <div class="container">
-  <div class="row">
-    <div class="col-8">
-      <app-campaign-details-campaign-info
-        [campaignTitle]="'Kampania 1'"
-        [campaignId]="1"
-        [campaignCreatedOn]="'2020-01-01'">
-      </app-campaign-details-campaign-info>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+        <app-campaign-details-campaign-info
+          [campaignTitle]="'Kampania 1'"
+          [campaignId]="1"
+          [campaignCreatedOn]="'2020-01-01'">
+        </app-campaign-details-campaign-info>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+        <artushima-campaign-details-gm-info
+          [gmName]="'Test Mistrz Gry'">
+        </artushima-campaign-details-gm-info>
+      </div>
     </div>
-    <div class="col-4">
-      <artushima-campaign-details-gm-info></artushima-campaign-details-gm-info>
-    </div>
-  </div>
 
+  </div>
 </div>
