--- a/artushima-web/src/app/my-campaigns/components/campaign-details/gm-info/gm-info.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/gm-info/gm-info.component.html
@@ -1,1 +1,11 @@
-<p>gm-info works!</p>
+<div class="card">
+  <div class="card-header text-center font-weight-bold">
+    <span>Mistrz gry</span>
+  </div>
+  <div class="card-body mx-auto">
+    <span class="m-2">
+      <fa-icon [icon]="iconGM" size="lg"></fa-icon>
+    </span>
+    <span id="gm-info_gm-name">{{ gmName }}</span>
+  </div>
+</div>
