--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-info/campaign-info.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-info/campaign-info.component.html
@@ -1,7 +1,9 @@
-<div class="container-fluid">
+<div class="container-fluid container-campaign-info">
   <div class="row">
     <div class="col-12">
-      <span id="campaign-info_campaign-title" class="campaign-title">{{ campaignTitle }}</span>
+      <h1>
+        <span id="campaign-info_campaign-title">{{ campaignTitle }}</span>
+      </h1>
     </div>
   </div>
   <div class="row campaign-minor-info-row">
