--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-info/campaign-info.component.scss
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-info/campaign-info.component.scss
@@ -1,5 +1,8 @@
-.campaign-title {
-  font-size: xx-large;
+@import "~src/colors.scss";
+
+.container-campaign-info {
+  background-color: $artushima-lightgray;
+  height: 100%;
 }
 
 .campaign-minor-info-row {
