--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
@@ -7,7 +7,7 @@
       <!-- Left column: Campaign info -->
       <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
         <artushima-campaign-details-campaign-info
-          [campaignTitle]="'Kampania 1'"
+          [campaignTitle]="'Kampania 1 Test Test Test'"
           [campaignId]="1"
           [campaignCreatedOn]="'2020-01-01'">
         </artushima-campaign-details-campaign-info>
@@ -25,7 +25,7 @@
 
     <!-- In-Game time info -->
     <div class="row">
-      <div class="col-12">
+      <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
         <artushima-campaign-details-in-game-time-info
           [beginDate]="'2053-11-18'"
           [passedDays]="10"
