extract the details-header component

--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
@@ -33,6 +33,15 @@
         </artushima-campaign-details-in-game-time-info>
       </div>
     </div>
+    <br>
+
+    <!-- Campaign timeline -->
+    <div class="row">
+      <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+        <artushima-campaign-details-campaign-timeline>
+        </artushima-campaign-details-campaign-timeline>
+      </div>
+    </div>
 
   </div>
 </div>
