add a stub-implementation of the campaign timeline component

--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-timeline/campaign-timeline.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-timeline/campaign-timeline.component.html
@@ -1,1 +1,5 @@
-<p>campaign-timeline works!</p>
+<artushima-section
+  [icon]="iconHistory"
+  [title]="'Oś Czasu'">
+  <p>Under construction...</p>
+</artushima-section>
