add the campaign players info component

--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-details.component.html
@@ -35,6 +35,15 @@
     </div>
     <br>
 
+    <!-- Campaign players info -->
+    <div class="row">
+      <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+        <artushima-campaign-players-info>
+        </artushima-campaign-players-info>
+      </div>
+    </div>
+    <br>
+
     <!-- Campaign timeline -->
     <div class="row">
       <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
