--- a/artushima-web/src/app/shared/widgets/details-header/details-header.component.html
+++ b/artushima-web/src/app/shared/widgets/details-header/details-header.component.html
@@ -1,19 +1,6 @@
-<div class="container-fluid">
-
-  <!-- Title -->
-  <div class="row align-items-center details-header-title">
-    <div class="col-12">
-      <h1 class="m-2">
-        <span class="pr-4">
-          <fa-icon [icon]="icon | defaultIcon" size="xl"></fa-icon>
-        </span>
-        <span id="{{ titleId }}">{{ title }}</span>
-      </h1>
-    </div>
-  </div>
-
-  <!-- Additional content -->
-  <div class="row p-2 align-items-end details-header-additional-info">
-    <ng-content></ng-content>
-  </div>
-</div>
+<h1 class="pb-2">
+  <span class="pr-4">
+    <fa-icon [icon]="icon | defaultIcon" size="xl"></fa-icon>
+  </span>
+  <span id="{{ titleId }}">{{ title }}</span>
+</h1>
