rename the details-header component into header component

--- a/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-info/campaign-info.component.html
+++ b/artushima-web/src/app/my-campaigns/components/campaign-details/campaign-info/campaign-info.component.html
@@ -1,11 +1,11 @@
 <div class="pb-4">
 
   <!-- Header -->
-  <artushima-details-header
+  <artushima-header
     [icon]="iconBook"
     [title]="campaignTitle"
     [titleId]="'campaign-info_campaign-title'">
-  </artushima-details-header>
+  </artushima-header>
 
   <div class="container-fluid">
 
